--- a/template/package.json
+++ b/template/package.json
@@ -14,17 +14,17 @@
     "ci:teamcity": "karma --env=tc start karma.coverage.js && npm run coverage:remap",
     "ci:jenkins": "karma --env=jk start karma.coverage.js && npm run coverage:remap",
     "clean": "rimraf dist && rimraf coverage",
-    "clean:css": "cleancss -o dist/css/main.min.css src/css/bootstrap.css src/css/main.css",
+    "clean:css": "cleancss -o dist/css/main.min.css src/client/css/bootstrap.css src/client/css/main.css",
     "compile": "webpack --config config/webpack.config.prod.js",
-    "copy:bs": "ncp node_modules/bootstrap/dist/css/bootstrap.css src/css/bootstrap.css",
+    "copy:bs": "ncp node_modules/bootstrap/dist/css/bootstrap.css src/client/css/bootstrap.css",
     "coverage": "npm run coverage:run && npm run coverage:remap && npm run coverage:open",
     "coverage:open": "opn coverage/html-ts/index.html",
     "coverage:remap": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html-ts -t html",
     "coverage:run": "cross-env NODE_ENV=development karma start karma.coverage.js",
-    "dev": "cross-env NODE_ENV=development npm run sass && npm run copy:bs && concurrently --kill-others \"webpack-dev-server --hot --inline\" \"node-sass --watch --output ./src/css ./src/sass\"",
+    "dev": "cross-env NODE_ENV=development npm run sass && npm run copy:bs && concurrently --kill-others \"NODE_ENV=development nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/index.ts\" \"node-sass --watch --output ./src/client/css ./src/client/sass\"",
     "lint": "tslint src/**/*.ts",
     "process:html": "htmlprocessor src/index.html -o dist/index.html",
-    "sass": "node-sass --output ./src/css ./src/sass",
+    "sass": "node-sass --output ./src/client/css ./src/client/sass",
     "serve": "http-server dist/ -o",
     "test": "cross-env NODE_ENV=development karma start karma.unit.js",
     "test:debug": "cross-env NODE_ENV=development karma start karma.debug.js",
@@ -33,13 +33,21 @@
   "dependencies": {
     "axios": "~0.15.3",
     "bootstrap": "~3.3.7",
+    "chalk": "^2.0.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "morgan": "^1.8.2",
     "vue": "~2.2.4",
     "vue-class-component": "~5.0.0",
     "vue-property-decorator": "~4.0.0",
     "vue-router": "~2.3.0"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/ejs": "^2.3.33",
+    "@types/express": "^4.0.36",
     "@types/mocha": "~2.2.40",
+    "@types/morgan": "^1.7.32",
     "@types/node": "~7.0.8",
     "@types/sinon": "~1.16.36",
     "awesome-typescript-loader": "~3.1.2",
@@ -49,7 +57,9 @@
     "concurrently": "~3.4.0",
     "copy-webpack-plugin": "~4.0.1",
     "cross-env": "~3.2.4",
+    "css-loader": "^0.28.4",
     "es6-promise": "~4.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "~0.10.1",
     "globby": "~6.1.0",
     "htmlprocessor": "~0.2.4",
@@ -76,14 +86,21 @@
     "node-sass": "~4.5.0",
     "opn-cli": "~3.1.0",
     "phantomjs-prebuilt": "~2.1.14",
-    "raw-loader": "~0.5.1",
+    "raw-loader": "^0.5.1",
     "remap-istanbul": "~0.9.1",
     "rimraf": "~2.6.1",
+    "sass-loader": "^6.0.6",
     "sinon": "~2.1.0",
+    "style-loader": "^0.18.2",
+    "ts-loader": "^2.3.2",
+    "ts-node": "^3.0.6",
     "tslint": "~4.5.1",
     "tslint-loader": "~3.4.3",
     "typescript": "~2.2.1",
-    "webpack": "~2.2.1",
-    "webpack-dev-server": "~2.4.2"
+    "vue-loader": "^13.0.2",
+    "vue-template-compiler": "^2.0.0",
+    "webpack": "^3.4.1",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
