--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -6,7 +6,7 @@
       "es2015",
       "es2015.promise"
     ],
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
     "sourceMap": true,
